objects/Account_Tax__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Taxes</relationshipLabel>
        <relationshipName>Account_Taxes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Rate__c</fullName>
        <formula>Tax_Rate__r.AcctSeed__Tax_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rate</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Tax_Rate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tax Rate</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Account Taxes</relationshipLabel>
        <relationshipName>Account_Taxes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tax_Type__c</fullName>
        <label>Tax Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sales</fullName>
                    <default>true</default>
                    <label>Sales</label>
                </value>
                <value>
                    <fullName>Purchase</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Account Tax</label>
    <nameField>
        <displayFormat>AccountTax-{00}</displayFormat>
        <label>Account Tax Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Taxes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>